log
Sat May  7 17:40:26 HSP 2022: 
 tests:  0|4
total_score: 0/70
5d06705
Sat May  7 17:41:18 HSP 2022: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:39:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    heap->capac = NULL;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
2c56325
Sat May  7 17:45:08 HSP 2022: 
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:39:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    heap->capac = NULL;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
6064151
Sat May  7 17:45:51 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ea20d60
Sat May  7 17:46:12 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:38:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    heap->size = NULL;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
118fd94
Sat May  7 17:46:24 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
186c62c
Sat May  7 17:46:44 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
92f436f
Sat May  7 17:48:18 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
606368d
